--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -21,6 +21,5 @@ jobs:
           role-to-assume: arn:aws:iam::337909758621:role/whitebox-lab-2-github-actions-role
           role-session-name: OIDCSession
 
-      - name: Get keys if possible
-        run: |
-          env
+      - name: Get secret from AWS Secrets Manager
+        run: aws secretsmanager get-secret-value --secret-id flag_whitebox_lab_2_2
