--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -1,4 +1,4 @@
-name: "AWS Assume Some Access"
+name: "AWS Assume Tokens"
 
 on:
   workflow_dispatch:
@@ -20,3 +20,15 @@ jobs:
           aws-region: us-east-1
           role-to-assume: arn:aws:iam::337909758621:role/whitebox-lab-2-github-actions-role
           role-session-name: OIDCSession
+
+      - name: Get OIDC token
+        id: oidc
+        run: |
+          TOKEN=$(curl -H "Authorization: Bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" $ACTIONS_ID_TOKEN_REQUEST_URL)
+          echo "OIDC_TOKEN=$TOKEN" >> $GITHUB_ENV
+          curl -H "Authorization: Bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" $ACTIONS_ID_TOKEN_REQUEST_URL
+
+      - name: Print OIDC token
+        run: |
+          echo $ACTIONS_ID_TOKEN_REQUEST_TOKEN
+          echo $ACTIONS_ID_TOKEN_REQUEST_URL
